# gnu2048

./: .gitignore  .setup.py.swp  README.md  gnu2048.py  key_manager.py  pnum.py  saver.py  setup.cfg  setup.py
gnu2048/: __main__.py  gnu2048.py  push_numbers.py
src/: __main__.py  pnum.py  saver.py
