[metadate]
name = gnu2048
version = 1.0.2
author = EmadDeve20
author_email = EmadDeve20@gmail.com
description = this is 2048 game and this game for gnu honor
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/emaddeve20/gnu2048
project_urls =
    Bug Tracker = https://github.com/emaddeve20/gnu2048/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPL-3.0 License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src
